test/invalid/FaltaIsClass/FaltaIsClass.plume
/**
 * 
 * Falta o is
 * @author 37060, Roberto Silva
 */
abstract class FaltaIsClass extends Object